<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/titleBmi"
        android:textColor="#14619B"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="95dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="40dp"
        android:fontFamily="cursive"
        android:text="@string/weight"
        android:textColor="#009688"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBmi"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="116dp"
        android:ems="6"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/hintWeight"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="cursive"
        android:text="@string/height"
        android:textColor="#009688"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight"
        app:layout_constraintVertical_bias="0.514" />

    <EditText
        android:id="@+id/height"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="80dp"
        android:ems="6"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/hintHeight"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/resultOfCalculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_for_calculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/calculateBodyMassIndex"
        android:textColor="#227023"
        android:textColorHint="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/resultOfCalculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resultOfCalculation"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:layout_marginBottom="68dp"
        android:fontFamily="cursive"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>